# LifeOSHarness

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  readme_zh.md
.github/workflows/: ci.yml
connectors/hermes/: __init__.py  lifeos_client.py  plugin.yaml
connectors/openclaw/: index.ts  lifeos-client.ts  openclaw.plugin.json  package.json
connectors/pi/: lifeos.ts
connectors/templates/: lifeos_hook.py  test_hook_smoke.py
docs/: architecture.md  claude-code-connector.md  codex-connector.md  create-new-character.md  database.md  hermes-connector.md  modern-agent-pack-template.md  openclaw-connector.md  pi-connector.md
docs/agent-packs/: README.md  musheng.md  nanzhi.md  shurou.md
docs/api/: lifeos-platform.md  pi-agent-adapter.md
lifeostomanyagent/: __init__.py  config.py
lifeostomanyagent/client/: cli.py  sdk.py
lifeostomanyagent/connectors/: claude_code.py  codex.py  hermes.py  hooks_base.py  openclaw.py  pi.py
lifeostomanyagent/domain/: models.py
lifeostomanyagent/server/: auth.py  deps.py  main.py  services.py
lifeostomanyagent/server/api/: inspector.py  packs.py  runtime.py  worlds.py
lifeostomanyagent/server/db/: models.py
lifeostomanyagent/server/engine/: bootstrap.py  connector_profiles.py  dream_llm.py  dreams.py  intent_classifier.py  pack_renderer.py  platform_guardrails.py  prompt_composer.py  runtime.py
lifeostomanyagent/server/overlays/: pi_tools.md
lifeostomanyagent/server/presets/: alice.py  alice_inner_voice.md  chenyuan.py  chenyuan_inner_voice.md
lifeostomanyagent/server/runtime_state/: __init__.py  sql_store.py
lifeostomanyagent/server/runtime_state/emotion_system/: __init__.py  rules.py  system.py
lifeostomanyagent/server/runtime_state/memory_system/: __init__.py  system.py
lifeostomanyagent/server/runtime_state/persona_system/: __init__.py  system.py
lifeostomanyagent/server/runtime_state/world_engine/: __init__.py  cli.py  clock.py  engine.py  enrich.py  fact_extractor.py  models.py  price.py  prompts_world.py  rules.py  store.py  venues.py
media/: README.md
skills/lifeos-agent-pack-builder/: SKILL.md
skills/lifeos-agent-pack-builder/agents/: openai.yaml
skills/lifeos-agent-pack-builder/references/: agent-pack-checklist.md
skills/lifeos-agent-pack-builder/scripts/: import_agent_pack.py
tests/: conftest.py  test_api.py  test_cli_world_switch.py  test_deepseek_dream_llm.py  test_dream_engine.py  test_hermes_connector.py  test_hooks_connectors.py  test_inspector_api.py  test_intent_classifier.py  test_modern_agent_pack_template.py  test_openclaw_connector.py  test_pi_connector.py  test_runtime.py  test_sql_storage.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css  types.ts
web/src/components/: DataState.tsx  JsonBlock.tsx  Layout.tsx  StatusBadge.tsx
web/src/lib/: api.ts  format.test.ts  format.ts  storage.ts
web/src/pages/: Overview.tsx  Packs.tsx  RuntimeInspector.tsx  WorldDetail.tsx  Worlds.tsx
