[project]
name = "lifeostomanyagent"
version = "0.1.0"
description = "LifeOS platform: customizable agent worlds with multi-runtime connectors"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[project.scripts]
lifeos = "lifeostomanyagent.client.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lifeostomanyagent"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["data", ".venv"]

[tool.ruff.lint]
# Pragmatic defaults: pyflakes, pycodestyle errors/warnings, isort, pyupgrade,
# and flake8-bugbear. Keep the set modest so CI catches real issues without
# forcing unrelated style churn.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length is handled by the formatter, not enforced as a hard error
    "B008",  # FastAPI/Typer rely on function calls in argument defaults
    "B905",  # zip(..., strict=) can be adopted separately where behavior matters
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
